--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -13,7 +13,7 @@ jobs:
       - name: Install latex
         run: |
             sudo apt-get update -y
-            sudo apt-get install -y latexmk texlive-latex-recommended texlive-latex-extra texlive-fonts-recommended
+            sudo apt-get install -y latexmk texlive-latex-recommended texlive-latex-extra texlive-fonts-recommended texlive-fonts-extra
 
       - name: Build
         uses: ammaraskar/sphinx-action@master
@@ -23,7 +23,7 @@ jobs:
             pip install rinohtype
             cp _static/__init__.py /usr/local/lib/python3.8/site-packages/rinoh/language
             cp _static/bg.py /usr/local/lib/python3.8/site-packages/rinoh/language
-          build-command: "make html rinoh"
+          build-command: "make html"
         
       - name: Deploy HTML
         uses: JamesIves/github-pages-deploy-action@3.7.1
@@ -34,6 +34,7 @@ jobs:
             SINGLE_COMMIT: true
         
       - name: Deploy PDF
+        if: false
         uses: JamesIves/github-pages-deploy-action@3.7.1
         with:
             GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
