--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -18,7 +18,7 @@ jobs:
             pip install rinohtype
             cp _static/__init__.py /usr/local/lib/python3.8/site-packages/rinoh/language
             cp _static/bg.py /usr/local/lib/python3.8/site-packages/rinoh/language
-          build-command: "make html rinoh"
+          build-command: "make html"
         
       - name: Deploy HTML
         uses: JamesIves/github-pages-deploy-action@3.7.1
@@ -29,6 +29,7 @@ jobs:
             SINGLE_COMMIT: true
         
       - name: Deploy PDF
+        if: false
         uses: JamesIves/github-pages-deploy-action@3.7.1
         with:
             GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
